test/Constraints/rdar107709341.code
// RUN: %target-typecheck-verify-language

// rdar://107709341 – Make sure we don't crash.
fn foo(_ x: Int) {
  immutable _ = {
    switch x {
    case Optional<Int>.some(x): // expected-error {{pattern of type 'Optional<Int>' cannot match 'Int'}} {{none}}
      break
    default:
      break
    }
  }
}
